@startuml

title __GAME-OF-THRONES's Class Diagram__\n

  package com.thrones.of.game {
    package com.thrones.of.game.config {
      class ApplicationConfiguration {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class CharacterSelector {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class CommandHelper {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.config {
      class Constants {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class EntryProcessor {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class ExitProcessor {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class FightModuleProcessor {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.utils {
      class FileLoader {
      }
    }
  }
  

  package com.thrones.of.game {
    class GameApplication {
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.processor {
      class GameExplorer {
      }
    }
  }
  

  package com.thrones.of.game {
    class GameLauncher {
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.Validator {
      class GameValidator {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class HousesModel {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.utils {
      class InputOutputHelper {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class Member {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.utils {
      class MessagePrinter {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      enum PlayerLevel {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class PlayerProfile {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.resolver {
      class QueryResolver {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class Session {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.timers {
      class StrengthBooster {
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class Weapon {
      }
    }
  }
  

  CharacterSelector o-- Session : session
  CharacterSelector o-- ApplicationConfiguration : applicationConfiguration
  EntryProcessor o-- GameValidator : validator
  EntryProcessor o-- ApplicationConfiguration : applicationConfiguration
  EntryProcessor o-- Session : session
  ExitProcessor o-- Session : session
  FightModuleProcessor o-- Session : session
  GameExplorer o-- ApplicationConfiguration : applicationConfiguration
  GameExplorer o-- Session : session
  GameValidator o-- Session : session
  HousesModel -up-|> Cloneable
  HousesModel -up-|> Serializable
  Member -up-|> Cloneable
  Member -up-|> Serializable
  PlayerProfile -up-|> Serializable
  PlayerProfile -up-|> Cloneable
  Session -up-|> Serializable
  Session o-- PlayerProfile : playerProfile
  Session o-- Member : selected
  Session o-- Member : enemy
  Session o-- HousesModel : selectedHouse
  Session o-- HousesModel : enemyHouse
  StrengthBooster -up-|> TimerTask
  Weapon -up-|> Cloneable
  Weapon -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
